--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,12 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(FEMjump
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        mainmenu.h mainmenu.cpp
+        levelselect.h levelselect.cpp
         res.qrc
         Player.h
+
+
 
     )
 # Define target properties for Android with Qt 6 as:
