--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         mainmenu.ui
         settings.h settings.cpp settings.ui
         game.h game.cpp
+        platform.h platform.cpp
+        platform.h platform.cpp
 
 
 
