added file saving + fixed audio issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         platform.h platform.cpp
         jumpeffect.h jumpeffect.cpp
         wall.h wall.cpp
+        settingsmanager.h settingsmanager.cpp
 
 
 
